tailscale-ton-conf/large-storage-egress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ton00-nfs
  namespace: tailscale
spec:
  type: ExternalName
  externalName: placeholder # disabled
  ports:
  - protocol: TCP
    port: 2049
