tailscale-ton-conf/seafile-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: seafile-tailscale
  namespace: seafile
  annotations:
    tailscale.com/expose: "true"
spec:
  selector:
    app: seafile
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
