tailscale-ton-conf/cilium-network-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-tailscale
  namespace: tailscale
spec:
  endpointSelector: {}
  egress:
  - toEntities:
    - all
  - toCIDR:
    - 0.0.0.0/0
  ingress:
  - fromEntities:
    - all
  - fromCIDR:
    - 0.0.0.0/0
